Contruir Header e footer

--- a/src/styles/sidebar-fototer.css
+++ b/src/styles/sidebar-fototer.css
@@ -1,5 +1,6 @@
 body {
     background-color: #000000;
+    font-family: var(--font-dm-sans);
 }
 
 .sidebar{
@@ -36,7 +37,7 @@ padding: 16px 0 0 16px;
     text-decoration: none;
     font-weight: 600;
     font-size: 14px;
-    font-family: "DM Sans", sans-serif;
+    font-family: var(--font-dm-sans);
 }
 .library{
     background-color: #121212;
@@ -62,7 +63,7 @@ padding: 16px 0 0 16px;
     border: 0px;
     font-size: 14px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
+    font-family: var(--font-dm-sans);
     text-align: center;
     text-decoration: none;
     text-transform: none;
@@ -98,7 +99,7 @@ padding: 16px 0 0 16px;
 .section-playlist__content .text{
     padding-bottom: 14px;
     color: #fff;
-    font-family: "DM Sans", sans-serif;
+    font-family: var(--font-dm-sans);
 }
 .section-playlist__content .title{
     font-weight: 700px;
@@ -115,7 +116,7 @@ padding: 16px 0 0 16px;
     border-radius: 20px;
     font-size: 12px;
     font-weight: 700;
-    font-family: "DM Sans", sans-serif;
+    font-family: var(--font-dm-sans);
     text-decoration: none;
     text-transform: none;
     padding: 10px;
@@ -147,5 +148,46 @@ padding: 16px 0 0 16px;
     margin: 8px;/*largura*/
     padding: 8px;
     border-radius: 20px;
-
+}
+.footer-premium{
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(to right, #06c025b3, #f3e602b3);
+    padding: 12px 30px;
+    justify-content: space-between;
+}
+.footer-premium .text-foo{
+    flex-shrink: 0;
+}
+.footer-premium .footer-premium__title{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 12px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.footer-premium .footer-premium__subititle{
+    font-size: 12px;
+    font-weight: 500;
+}
+.footer-premium button{
+    background-color: #000000;
+    color: white;
+    font-size: 17px;
+    border:2px solid #ae2896 ;
+    padding: 12px 16px;
+    border-radius: 50px;
+    margin: 8px;
+    width: 200px;
+    cursor: pointer;
+    flex-shrink: 0;
+}
+.footer-premium button:hover {
+    background-color: #878787;
+    color: #000000;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #000000;
 }
